check.log
   Compiling getrandom v0.3.3
    Checking wgpu-core-deps-windows-linux-android v25.0.0
    Checking anstream v0.6.18
    Checking regex-automata v0.4.9
   Compiling concat-idents v1.1.5
   Compiling num-derive v0.4.2
   Compiling arg_enum_proc_macro v0.3.4
   Compiling simd_helpers v0.1.0
   Compiling winit v0.30.12
   Compiling wgpu v25.0.2
    Checking tracing-core v0.1.33
   Compiling cgmath v0.18.0 (https://github.com/rustgd/cgmath#ff840cbf)
    Checking pin-project-lite v0.2.16
   Compiling peg-runtime v0.6.3
    Checking new_debug_unreachable v1.0.6
error: The "wasm_js" backend requires the `wasm_js` feature for `getrandom`. For more information see: https://docs.rs/getrandom/0.3.3/#webassembly-support
  --> C:\Users\kokka\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\getrandom-0.3.3\src\backends.rs:34:17
   |
34 | /                 compile_error!(concat!(
35 | |                     "The \"wasm_js\" backend requires the `wasm_js` feature \
36 | |                     for `getrandom`. For more information see: \
37 | |                     https://docs.rs/getrandom/", env!("CARGO_PKG_VERSION"), "/#webassembly-support"
38 | |                 ));
   | |__________________^

error[E0425]: cannot find function `fill_inner` in module `backends`
  --> C:\Users\kokka\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\getrandom-0.3.3\src\lib.rs:99:19
   |
99 |         backends::fill_inner(dest)?;
   |                   ^^^^^^^^^^ not found in `backends`

error[E0425]: cannot find function `inner_u32` in module `backends`
   --> C:\Users\kokka\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\getrandom-0.3.3\src\lib.rs:128:15
    |
128 |     backends::inner_u32()
    |               ^^^^^^^^^ not found in `backends`
    |
help: consider importing this function
    |
 33 + use crate::util::inner_u32;
    |
help: if you import `inner_u32`, refer to it directly
    |
128 -     backends::inner_u32()
128 +     inner_u32()
    |

error[E0425]: cannot find function `inner_u64` in module `backends`
   --> C:\Users\kokka\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\getrandom-0.3.3\src\lib.rs:142:15
    |
142 |     backends::inner_u64()
    |               ^^^^^^^^^ not found in `backends`
    |
help: consider importing this function
    |
 33 + use crate::util::inner_u64;
    |
help: if you import `inner_u64`, refer to it directly
    |
142 -     backends::inner_u64()
142 +     inner_u64()
    |

For more information about this error, try `rustc --explain E0425`.
   Compiling noop_proc_macro v0.3.0
error: could not compile `getrandom` (lib) due to 4 previous errors
warning: build failed, waiting for other jobs to finish...
error: could not compile `getrandom` (lib) due to 4 previous errors
